# IronPress

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
src/: channel_flip.rs  channel_pack.rs  examples.rs  main.rs  mask_sum.rs  pipeline.rs  util.rs
src/cli/: args.rs  config.rs
src/op/: flip.rs  pack.rs
test/clover/: texture_pipeline.json
